Bugzilla Bug 340956: when emulating PR_APPEND, we should use PR_Seek64 instead of PR_Seek, otherwise it won't work on large files.  The patch is contributed by Nils Maier <MaierMan@web.de> and Masatoshi Kimura (:emk) <VYV03354@nifty.ne.jp>. r=wtc.  Thanks to Nils Maier for tracking down the bug.